[gd_scene load_steps=14 format=3 uid="uid://cocbdi33rhrjs"]

[ext_resource type="Script" path="res://Scenes/ice_slow_area.gd" id="1_7wqne"]
[ext_resource type="Texture2D" uid="uid://1bfyrrgw07nw" path="res://Sprites/dust smoke particles sheet 8x8.png" id="1_u1uwd"]
[ext_resource type="Texture2D" uid="uid://r0onhjl4o0wb" path="res://Sprites/Placeholders/Circle/Circle-0001.png" id="2_52aqn"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_0fc60"]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_0cc83"]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id="Curve_klkyw"]
_data = [Vector2(0, 1), 0.0, 0.194359, 0, 0, Vector2(1, 0), -2.05987, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_d1x1f"]
curve = SubResource("Curve_klkyw")

[sub_resource type="Gradient" id="Gradient_dj8q7"]
colors = PackedColorArray(0.514233, 0.721914, 0.979809, 1, 7.12335e-06, 0.880076, 0.880052, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_gyq4c"]
gradient = SubResource("Gradient_dj8q7")

[sub_resource type="Curve" id="Curve_x5agh"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.68357), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_77wde"]
curve = SubResource("Curve_x5agh")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_26tu2"]
particle_flag_disable_z = true
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 1.0
emission_ring_radius = 30.0
emission_ring_inner_radius = 28.0
velocity_pivot = Vector3(0, 1, 0)
direction = Vector3(0, 0, 0)
spread = 15.0
angular_velocity_min = -1.0
angular_velocity_max = 1.0
gravity = Vector3(0, -1.5, 0)
scale_curve = SubResource("CurveTexture_77wde")
color_ramp = SubResource("GradientTexture1D_gyq4c")
alpha_curve = SubResource("CurveTexture_d1x1f")

[sub_resource type="CircleShape2D" id="CircleShape2D_x5wnw"]
radius = 32.0

[node name="IceSlowArea" type="Area2D"]
modulate = Color(0.262745, 0.670588, 0.784314, 1)
z_index = 1
z_as_relative = false
scale = Vector2(2, 2)
collision_layer = 0
script = ExtResource("1_7wqne")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.372549)
self_modulate = Color(0.509286, 0.509286, 0.509286, 1)
material = SubResource("CanvasItemMaterial_0fc60")
scale = Vector2(2.1, 2.1)
texture = ExtResource("2_52aqn")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_0cc83")
amount = 50
process_material = SubResource("ParticleProcessMaterial_26tu2")
texture = ExtResource("1_u1uwd")
lifetime = 3.0
visibility_rect = Rect2(-55.6749, -62.5848, 110.806, 117.503)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_x5wnw")

[node name="SlowAreaTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="SlowAreaTimer" to="." method="_on_slow_area_timer_timeout"]
